@@ -41,6 +41,12 @@
      [ssh_config.5]
      CheckHostIP set to ``fingerprint'' will display both hex and random art
      spotted by naddy@
+   - grunk@cvs.openbsd.org 2008/06/11 23:51:57
+     [key.c]
+     #define statements that are not atoms need braces around them, else they
+     will cause trouble in some cases.
+     Also do a computation of -1 once, and not in a loop several times.
+     spotted by otto@
 
 20080611
  - (djm) [channels.c configure.ac]
@@ -4203,4 +4209,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4973 2008/06/12 18:44:25 dtucker Exp $
+$Id: ChangeLog,v 1.4974 2008/06/12 18:45:50 dtucker Exp $
